práca na druhom zadaní

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">hra3</string>
     <string name="sk_re">Skóre</string>
     <string name="za_a_hru">Začať hru</string>
+    <string name="score">Score</string>
+    <string name="date">date</string>
 </resources>
